# FANN_Benchmark

./: README.md  index.html
HCBGen_v2/: Benchmark_anal_tool.py  hardness_aware_generator.py  hardness_aware_generator_v1.py
HCBGen_v2/Index_analyzer/: ACORN_Analyzer.py  MILVUS_Analyzer.py  NHQ_Analyzer.py  Post_Filter_Analyzer.py  Pre_Filter_Analyzer.py  RWALKS_Analyzer.py  UNG_Analyzer.py  pareto_comp.py
HCBGen_v2/hardness_estimator/: calculate_hardness_v5_0.py  calculate_hardness_v5_1.py
HCBGen_v2/label_generator/: base_label_generator.py
HCBGen_v2/utils/: base_label_generator_dev.ipynb  compute_groundtruth  fvecs_to_bin
experiments/alignment_experiment/result/: Factor_fail.ipynb  spearman_results_glove.csv  (+2 more)
hardness/: calculate_baseline_hardness.py  calculate_hardness_v5_0.py  calculate_hardness_v5_1.py  hardness_anal.ipynb
methods/ACORN/: ACORN_build.py
methods/ACORN/tutorial/cpp/: 1-Flat.cpp  6-mwAcorn.cpp  7-ACORN_hnm.cpp  8-mk_ACORN_idx.cpp  9-search_ACORN.cpp  CMakeLists.txt
methods/NHQ/: search_results_sift_random.txt  search_results_sift_zipf.txt  sift_build_all_indices.sh  sift_test.sh
methods/Post_Filtering/: post_filtering.py  post_filtering_benchmark_anal.ipynb  post_filtering_benchmark_anal.py  post_filtering_benchmark_anal2.ipynb  post_fltering.ipynb  trade_off.pkl  trade_off_new.pkl  trade_off_reference.pkl
methods/Pre_Filtering/: pre_filtering.py  pre_fltering.ipynb
methods/Unified-Navigating-Graph/: sift_test.sh
static/css/: index.css
utils/: generate_benchmark.py  label_generator.ipynb  make_filter_json.py  make_payload.py
(+78 files in other folders)
